# eink256

./: settings.gradle
app/: build.gradle
app/release/: app-release.apk  output-metadata.json
app/src/androidTest/java/com/zyyme/eink256/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  eink256.cpp
app/src/main/java/com/zyyme/eink256/: Eink256.java  Eink256Native.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/zyyme/eink256/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
